--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve-json": "json-server ./src/db.json --port 4000"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.33.0",
